force-app/main/default/objects/Action__c/Action__c.object-meta.xml
<CustomObject>
    <label>QA Action</label>
    <nameField>
        <label>Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>QA Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>