force-app/main/default/objects/Action__c/fields/Assign_Math_V1_to_V2__c.field-meta.xml
<CustomField>
    <fullName>Assign_Math_V1_to_V2__c</fullName>
    <label>Assign_Math_V1_to_V2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>(none)</fullName>
            </value>
            <value>
                <fullName>+</fullName>
            </value>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>*</fullName>
            </value>
            <value>
                <fullName>/</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>