force-app/main/default/objects/Action__c/fields/Assign_Value1__c.field-meta.xml
<CustomField>
    <fullName>Assign_Value1__c</fullName>
    <label>Assign_Value1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>