force-app/main/default/objects/Action__c/fields/Assign_Value1_Type__c.field-meta.xml
<CustomField>
    <fullName>Assign_Value1_Type__c</fullName>
    <label>Assign_Value1_Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User Field</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>