force-app/main/default/objects/Action__c/fields/Assignment_Type__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Type__c</fullName>
    <label>Assignment Type (Deprecated)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>