force-app/main/default/objects/Action__c/fields/Field_to_Update__c.field-meta.xml
<CustomField>
    <fullName>Field_to_Update__c</fullName>
    <label>Field to Update</label>
    <length>150</length>
    <type>Text</type>
</CustomField>