force-app/main/default/objects/Action__c/fields/Field_Value_to_Assign__c.field-meta.xml
<CustomField>
    <fullName>Field_Value_to_Assign__c</fullName>
    <label>Field Value to Assign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>