force-app/main/default/objects/Action__c/fields/Flow_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Flow_Parameter__c</fullName>
    <label>Flow Parameter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>