force-app/main/default/objects/Action__c/fields/Match_Object__c.field-meta.xml
<CustomField>
    <fullName>Match_Object__c</fullName>
    <description>The field that stores the name object that is used to perform Pattern Matched or Pattern Not Matched evaluation.</description>
    <inlineHelpText>The field that stores the name object that is used to perform Pattern Matched or Pattern Not Matched evaluation.</inlineHelpText>
    <label>Match Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>