force-app/main/default/objects/Action__c/fields/Match_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Match_Pattern__c</fullName>
    <label>Match Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>