force-app/main/default/objects/Action__c/fields/Object_to_Update__c.field-meta.xml
<CustomField>
    <fullName>Object_to_Update__c</fullName>
    <label>Object to Update</label>
    <length>150</length>
    <type>Text</type>
</CustomField>