force-app/main/default/objects/Action__c/fields/Off_Set__c.field-meta.xml
<CustomField>
    <fullName>Off_Set__c</fullName>
    <label>Off Set</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>