force-app/main/default/objects/Action__c/fields/Overwrite_non_blank_Values__c.field-meta.xml
<CustomField>
    <fullName>Overwrite_non_blank_Values__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Overwrite non-blank Values</label>
    <type>Checkbox</type>
</CustomField>