force-app/main/default/objects/Action__c/fields/Stop_Processing_Further_Rules__c.field-meta.xml
<CustomField>
    <fullName>Stop_Processing_Further_Rules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stop Processing Further Rules</label>
    <type>Checkbox</type>
</CustomField>