force-app/main/default/objects/Action__c/fields/Trigger_On__c.field-meta.xml
<CustomField>
    <fullName>Trigger_On__c</fullName>
    <label>Trigger On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Object Assigned</fullName>
            </value>
            <value>
                <fullName>Object Not Assigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>