force-app/main/default/objects/Action__c/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <label>Trigger Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
            </value>
            <value>
                <fullName>Pattern Matched</fullName>
            </value>
            <value>
                <fullName>Pattern Not Matched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>